# rid

./: .gitignore  .rustc_info.json  .rustdoc_fingerprint.json  Cargo.toml  README.md
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/rid/: all.html  constant.RID_CYCLE_TIME_MS.html  constant.RID_CYCLE_TIME_S.html  constant.RID_CYCLE_TIME_US.html  constant.RID_DEFAULT_PID.html  constant.RID_DEFAULT_VID.html  constant.RID_MODE_INDEX.html  constant.RID_PACKET_SIZE.html  constant.RID_PTP_RESERVED_BYTES.html  constant.RID_TASK_INDEX.html  index.html  sidebar-items.js  type.RIDReport.html
doc/rid/ptp/: constant.PTP_CRTS_INDEX.html  constant.PTP_CWTS_INDEX.html  constant.PTP_HRTS_INDEX.html  constant.PTP_HWTS_INDEX.html  constant.SEC_PER_HOUR.html  constant.USEC_PER_SEC.html  fn.ptp_offset.html  index.html  sidebar-items.js  struct.Duration.html  struct.TimeStamp.html
doc/rid/rtnt/: constant.MAX_TASKS.html  constant.MAX_TASK_CONFIG_CHUNKS.html  constant.MAX_TASK_DATA_BYTES.html  constant.MAX_TASK_DATA_FLOATS.html  constant.MAX_TASK_INPUTS.html  constant.RTNT_DATA_INDEX.html  constant.RTNT_HDR_INDEX.html  constant.RTNT_HDR_LENGTH.html  enum.PacketType.html  enum.TaskStatus.html  index.html  sidebar-items.js  struct.TaskConfig.html  (+6 more)
src/: host.rs  lib.rs  ptp.rs
src/host/: data_structures.rs  interface.rs  layer.rs  mod.rs  reader.rs  task_builder.rs  writer.rs
src/rtnt/: constant.rs  default.rs  demo.rs  mod.rs  switch.rs  task.rs  task_generator.rs  task_manager.rs
tests/: ptp_performance.rs  rt_task_dead.rs  rtnt_comms.rs  rtnt_no_std.rs
(+36 files in other folders)
